# frontier_mining_tracker_cpp

./: CMakeLists.txt
data/: factory_buildings.json  items.json
data/reference/: vehicles.json
resources/: icons.qrc
src/: main.cpp
src/core/: database.cpp  database.h  itemimporter.cpp  itemimporter.h  locationimporter.cpp  locationimporter.h  operationsmanager.cpp  operationsmanager.h  recipeimporter.cpp  recipeimporter.h  types.h  unitconverter.h  vehicleimporter.cpp  vehicleimporter.h
src/ui/: accountstab.cpp  accountstab.h  additemdialog.cpp  additemdialog.h  addtransactiondialog.cpp  addtransactiondialog.h  auditorwidget.cpp  auditorwidget.h  budgetoverviewtab.cpp  budgetoverviewtab.h  budgetstab.cpp  budgetstab.h  capitalplannerwidget.cpp  capitalplannerwidget.h  costanalysistab.cpp  costanalysistab.h  cycletimetab.cpp  cycletimetab.h  dashboardwidget.cpp  dashboardwidget.h  datahubwidget.cpp  datahubwidget.h  equipmentoperationstab.cpp  equipmentoperationstab.h  equipmentplannertab.cpp  equipmentplannertab.h  facilityplannertab.cpp  facilityplannertab.h  factorybuildingstab.cpp  factorybuildingstab.h  financesettingstab.cpp  financesettingstab.h  financewidget.cpp  financewidget.h  fuellogwidget.cpp  fuellogwidget.h  inventorytab.cpp  inventorytab.h  ledgertab.cpp  ledgertab.h  (+24 more)
tools/: Items.xlsx  Locations.xlsx  Vehicle_Specs.xlsx  frontier_mining.db  import_items.py  import_locations.py  import_vehicles.py  items.json  location_types.json  locations.json  maps.json  vehicles.json  workbenches.json
ui/: mainwindow.ui
